# medseg-api

./: .dockerignore  .env.example  .gitignore  .ruff.toml  AGENT.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  predictions.db  predictions.db-shm  predictions.db-wal  pyproject.toml
.github/workflows/: cd.yml  ci.yml  retrain.yml
configs/: model_registry.yaml  serving.yaml
frontend/: index.html
monitoring/: streamlit_app.py
scripts/: add_new_data.py  create_api_key.py  deploy.sh  download_data.py  evaluate.py  export_onnx.py  predict_and_save.py  preprocess_data.py  register_model.py  retrain.py  setup_models.py  train.py
src/: __init__.py
src/api/: main.py
src/api/middleware/: auth.py  logging_mw.py  rate_limit.py
src/models/: __init__.py  explainability.py  inference.py  registry.py
src/monitoring/: dashboard.py  drift.py  logger.py  prediction_logger.py
src/training/: augmentations.py  callbacks.py  dataset.py  evaluation.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py  config.py  dicom.py  image.py
tests/: __init__.py  conftest.py
tests/test_api/: conftest.py  test_auth.py  test_create_api_key.py  test_health.py  test_models.py  test_monitoring.py  test_predict.py  test_predict_logging.py  test_rate_limit.py
tests/test_models/: __init__.py  conftest.py  test_architectures.py  test_inference.py  test_registry.py
tests/test_monitoring/: test_prediction_logger.py
tests/test_training/: __init__.py  test_dataset.py  test_losses.py
tests/test_utils/: test_config.py
(+10 files in other folders)
